Promoted by one level (chapter -> part, section -> chapter, etc.) for cleaner organization

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -1,4 +1,4 @@
-\section{Estrellas}
+\chapter{Estrellas}
 
 Las \textbf{estrellas} son de los objetos más fundamentales e importantes en el
 estudio de los astros. \citetbookchapter{anIntroStellarAstro}{1} define una
@@ -22,7 +22,7 @@ para describir la estructura de una estrella al igual que su evolución,
 empezando con la formación de una \textit{protoestrella}, la cual a lo largo del
 tiempo se transforma en una estrella.
 
-\subsection{Formación}
+\section{Formación}
 
 % TODO: add citations from "Formación estelar" presentation I did in MHD course
 % Agrega paginas web
@@ -82,7 +82,7 @@ respecto a su temperatura y luminosidad.
 	\label{protostarEvolutionFig}
 \end{figure}
 
-\subsection{Secuencia Principal}
+\section{Secuencia Principal}
 
 Una vez que una estrella llegue su etapa de secuencia principal el sistema se
 vuelve estable a largas escalas temporales. En este estado la estrella deja de
@@ -92,7 +92,7 @@ en su núcleo. A continuación se definen dos conceptos importantes en la físic
 estelar: el \textbf{equilibrio hidrostático} y el \textbf{equilibrio
 termodinámico local}.
 
-\subsubsection{Equilibrio Hidrostático}
+\subsection{Equilibrio Hidrostático}
 
 Podemos simplificar el modelo de una estrella al introducir la simetría
 esférica, en el cual las propiedades del gas que forma la estrella dependen
@@ -132,7 +132,7 @@ material circundante\textemdash se obtiene la
 	\label{figuraEquilibrioHidrostatico}
 \end{figure}
 
-\subsubsection{Equilibrio Termodinámico Local}
+\subsection{Equilibrio Termodinámico Local}
 
 Una estrella como resultado de su mecanismo de transporte de energía no está en
 un estado de equilibrio térmico. El núcleo, en donde se produce la gran mayoría
@@ -161,7 +161,7 @@ estructura de la estrella se puede determinar siempre y cuando se sepa la masa
 de la estrella, y la densidad, temperatura, y composición química de cada punto
 en su interior.
 
-\subsection{Atmósfera Estelar}
+\section{Atmósfera Estelar}
 
 La gran mayoría de la radiación que recibimos de las estrellas\textemdash tanto
 de nuestro Sol como de sistemas estelares ajenos\textemdash proviene de su
@@ -216,7 +216,7 @@ parámetros conocidos de la estrella que se quiere modelar, su temperatura
 efectiva, aceleración gravitacional superficial, y metalicidad (en unidades
 solares), dando como resultado el espectro de la estrella.
 
-\subsubsection{Atmósfera de Kurucz}
+\subsection{Atmósfera de Kurucz}
 
 Entre los códigos de modelos de atmósferas estelares más utilizados está el de
 \code{ATLAS} escrito por Robert L. Kurucz. A continuación se especifican las
@@ -239,7 +239,7 @@ para un ajuste adecuado a los datos observacionales dados). %TODO: cite later se
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.35]{Introduccion/Figures/Figura Kurucz_PHOEBE Reference.png}
+	\includegraphics[scale=0.33]{Introduccion/Figures/Figura Kurucz_PHOEBE Reference.png}
 	\caption{Espectros sintéticos de las tablas de Kurucz para estrellas de varias temperaturas. El resto de los parámetros físicos utilizados se mantuvieron fijos para los cuatro modelos: $\log{g/g_0} = 4.0$ y [M/H] = 0.0. Figura obtenida de \citetbookchapter{phoebeScientificReference}{4.2}.}
 	\label{figuraKuruczEspectro}
 \end{figure}
@@ -254,7 +254,7 @@ de marea causan una partida notable de su forma esférica. A pesar de no ser un
 modelo perfecto, en la mayoría de los casos es más adecuado utilizar un código
 como \code{ATLAS} que modelar una estrella como un simple cuerpo negro.
 
-\subsection{Evolución}
+\section{Evolución}
 
 En el transcurso del tiempo cada estrella será sujeta a ciertos cambios en su
 estructura. Esto se debe a que podemos considerar a una estrella cómo un objeto
@@ -275,7 +275,7 @@ principal}.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.47]{Introduccion/Figures/Figura Evolucion_MS_Astronomy_Physical_Perspective.png}
+	\includegraphics[scale=0.43]{Introduccion/Figures/Figura Evolucion_MS_Astronomy_Physical_Perspective.png}
 	\caption{Evolución de estrellas de la secuencia principal basado en su masa
 	inicial en el diagrama HR. La línea punteada representa la posición de la
 	estrella en el primer momento que se integra a la secuencia principal. Al
