--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,4 +1,5 @@
-\chapter{Introducción}
+% \chapter{Introducción}
+\part{Introducción}
 
 \input{Introduccion/Estrella.tex}
 \input{Introduccion/SistemasBinarios.tex}
